--- a/css/liquid-slider.css
+++ b/css/liquid-slider.css
@@ -228,11 +228,37 @@
     font-weight: 700;
     font-family: serif;
 }
-@media screen (min-width:1800px){
-    .first_slide{
-        font-size: 50;
-    }
-
+.button-back {
+  text-decoration: none;
+  outline: none;
+  display: inline-block;
+  width: 350px;
+  height: 40px;
+  line-height: 40px;
+  border-radius: 45px;
+  font-size: 21px;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 1px;
+  font-weight: 600;
+  color: black;
+  box-shadow: 0 8px 15px rgba(0,0,0,.1);
+  transition: .3s;
+  padding-top:5px;
+  padding-bottom:5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-top: 10px;
+  background-color: white;
+}
+.button-back:hover{
+  box-shadow: 0 15px 20px rgba(46,229,157,.4);
+  color: black;
+  transform: translateY(-7px);
 }
 
+@media (min-width: 1900px) {
+    .title {
+        font-size: 50;
+    }
 }
