--- a/main.css
+++ b/main.css
@@ -60,6 +60,9 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
+.row {
+
+}
 .row:after{
   clear: both;
   content: "";
@@ -69,6 +72,7 @@ img {
   width:360px;
   margin-right:30px;
   float: left;
+  margin-left: 130px;
 }
 .col-4:last-child {
   margin-right:0px;
@@ -235,7 +239,7 @@ a{
   height: 130px;
   line-height: 40px;
   border-radius: 45px;
-  font-size: 21px;
+  font-size: 30px;
   text-transform: uppercase;
   text-align: center;
   letter-spacing: 1px;
